// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example from README 1`] = `
Object {
  "Options": Object {
    "ComponentForLoading": [Function],
    "ID": "component",
    "loaded": false,
  },
  "html": "
<!--0-->
<!--0-->
<!--0-->
",
}
`;

exports[`example from README 2`] = `
Object {
  "Options": Object {
    "ComponentForLoading": [Function],
    "ID": "component",
    "loaded": false,
  },
  "html": "
Loading...
<!--0-->
<!--0-->
<!--0-->
<!--0-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "delay": 100,
    "loadingComponent": [Function],
    "showLoader": false,
  },
  "html": "<!--0-->",
}
`;

exports[`renders correctly 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "delay": 100,
    "loadingComponent": [Function],
    "showLoader": true,
  },
  "html": "
Loading...
<!--0-->
<!--0-->
",
}
`;
